# reactmed

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  reactmed_nginx.conf  requirements.txt
api/: Dockerfile  app.py  docker-compose.yml  nginx.conf  package-lock.json  package.json  reactmed_nginx.conf  requirements.txt
api/api/: settings.py  urls.py  wsgi.py
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/analytics/: forms.py  load.py  urls.py  views.py
apps/api/: serializers.py  urls.py
apps/appointments/: forms.py  urls.py  views.py
apps/core/: admin.py  forms.py  managers.py  models.py
apps/diagnosis/: urls.py  views.py
apps/index/: urls.py  views.py
apps/main/: urls.py  views.py
apps/med_tests/: urls.py  views.py
apps/patients/: forms.py  urls.py  views.py
apps/rest/: models.py  serializers.py  urls.py  views.py
apps/users/: urls.py  views.py
client/: .gitignore  CMakeLists.txt  reactmed_client.pro
db/: backup.sql
front/: package-lock.json
front/src/: App.js
reactmed/: .gitignore  manage.py  package-lock.json  reactmed.ini  reactmed_nginx.conf  settings.py  urls.py  wsgi.py
reactmed/reactmed/: settings.py
reactmed_front/: package-lock.json  package.json
reactmed_front/public/: index.html
server/api/: package-lock.json
server/front/: package.json
server/medapi/: manage.py  package.json  requirements.txt
server/medfront/: package-lock.json  package.json
server/scripts/: run.dev.sh  run.prod.sh
static/jquery-serializer/: serializer.js
templates/analytics/: clustering.html  (+2 more)
(+193 files in other folders)
